--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,5 @@
 [UPD]
-v=1.2
-build=7
-des=Доступно обновление.7
-upd=1.2 - Исправления..123|456|789
+v=1.1
+build=6
+des=Доступно обновление.
+upd=1.1 - Изменена команда активации, оптимизирован код, обновлена защита, добавлено автообновление.
