--- a/verlen.ini
+++ b/verlen.ini
@@ -2,4 +2,4 @@
 v=1.1
 build=6
 des=Доступно обновление.
-upd=1.1 - Изменена команда активации, оптимизирован код, обновлена защита, добавлено автообновление.
+upd=1.1 - Изменена команда активации, оптимизирован код, добавлено автообновление.
